--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -209,7 +209,7 @@
   }
 
   body {
-    @apply bg-background text-foreground antialiased relative w-full font-sans;
+    @apply bg-background text-foreground antialiased relative w-full font-sans min-h-screen flex flex-col;
   }
 
   html {
