--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,9 +10,7 @@ import Navbar from "@/components/shared/navbar";
 import Layout from "@/layouts/layout.astro";
 ---
 
-<Layout
-  title="GERCEP - Kirim Senyuman Sampai Tujuan | Modern Logistics Solutions"
->
+<Layout title="GERCEP - Deliver Smiles To Every Destination">
   <!-- Critical above-the-fold: hydrate immediately -->
   <Navbar client:load/>
 
