--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,6 +1,7 @@
 ---
 import "@/styles/global.css";
 import Analytics from "@vercel/analytics/astro";
+import SpeedInsights from "@vercel/speed-insights/astro";
 
 type Props = {
   title: string;
@@ -99,5 +100,6 @@ const structuredData = {
     <slot/>
 
     <Analytics/>
+    <SpeedInsights/>
   </body>
 </html>
